# MTCNN_face_detection_alignment

./: .gitignore
code/codes/vs/: CMakeLists.txt  CascadeCNN.sln  ReadMe.md
code/codes/vs/CascadeFaceDetection/: CMakeLists.txt  CascadeFaceDetection.cpp  CascadeFaceDetection.h  CascadeFaceDetection.vcxproj  CascadeFaceDetection.vcxproj.filters  python_module.cpp
code/codes/vs/CascadeFaceDetection/cmake/: Dependencies.cmake  Utils.cmake
code/codes/vs/Test/: CMakeLists.txt  TestCascadeCNN.vcxproj  TestFaceDetection.inc.h  test.cpp
code/codes/vs/Test/util/: BoundingBox.inc.h
code/codes/vs/cmake/: Dependencies.cmake
code/codes/vs/cmake/Modules/: FindNumPy.cmake
code/codes/vs/testPyCascadeCNN/: testPyCascadeCNN.py
